--- a/assets/css/individuals/parent.css
+++ b/assets/css/individuals/parent.css
@@ -50,6 +50,9 @@
     font-size:20px;
     color:#2c3e50;
 }
+span,p{
+    line-height:30px;
+}
 body{
     background-color: whitesmoke;
 }
@@ -87,8 +90,11 @@ body{
 .bold{
     font-weight:600;
 }
+.ltr{
+    direction: ltr;
+    display: inline-block;
+}
 ul>li{
-    height: 40px;
     line-height: 40px;
     list-style-type: disc;
 }
